--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
         <div id="original" class="col s12">
           <center><h1 class="title">Original</h1></center>
           <div class="row">
-            <div class="col s3">1</div>
-            <div class="col s2">2</div>
-            <div class="col s2">3</div>
-            <div class="col s2">4</div>
-            <div class="col s3">5</div>
+            <div class="col s3">.</div>
+            <div class="col s2"id="one">1</div>
+            <div class="col s2"id="two">2</div>
+            <div class="col s2"id="three">3</div>
+            <div class="col s3">.</div>
           </div>
           <div class="row">
-            <div class="col s3">1</div>
-            <div class="col s2">2</div>
-            <div class="col s2">3</div>
-            <div class="col s2">4</div>
-            <div class="col s3">5</div>
+            <div class="col s3">.</div>
+            <div class="col s2"id="four">4</div>
+            <div class="col s2"id="five">5</div>
+            <div class="col s2"id="six">6</div>
+            <div class="col s3">.</div>
           </div>
           <div class="row">
-            <div class="col s3">1</div>
-            <div class="col s2">2</div>
-            <div class="col s2">3</div>
-            <div class="col s2">4</div>
-            <div class="col s3">5</div>
+            <div class="col s3">.</div>
+            <div class="col s2"id="seven">7</div>
+            <div class="col s2"id="eight">8</div>
+            <div class="col s2"id="nine">9</div>
+            <div class="col s3">.</div>
           </div>
         </div>
         <div id="8bit" class="col s12">
