--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
           <center><h1 class="title">Original</h1></center>
           <div class="row">
             <div class="col s3">.</div>
-            <div class="col s2"id="one">1</div>
-            <div class="col s2"id="two">2</div>
-            <div class="col s2"id="three">3</div>
+            <div class="col s2 btn btn-primary"id="one"> </div>
+            <div class="col s2 btn btn-primary"id="two"> </div>
+            <div class="col s2 btn btn-primary"id="three"> </div>
             <div class="col s3">.</div>
           </div>
           <div class="row">
             <div class="col s3">.</div>
-            <div class="col s2"id="four">4</div>
-            <div class="col s2"id="five">5</div>
-            <div class="col s2"id="six">6</div>
+            <div class="col s2 btn btn-primary"id="four"> </div>
+            <div class="col s2 btn btn-primary"id="five"> </div>
+            <div class="col s2 btn btn-primary"id="six"> </div>
             <div class="col s3">.</div>
           </div>
           <div class="row">
             <div class="col s3">.</div>
-            <div class="col s2"id="seven">7</div>
-            <div class="col s2"id="eight">8</div>
-            <div class="col s2"id="nine">9</div>
+            <div class="col s2 btn btn-primary"id="seven"> </div>
+            <div class="col s2 btn btn-primary"id="eight"> </div>
+            <div class="col s2 btn btn-primary"id="nine"> </div>
             <div class="col s3">.</div>
           </div>
         </div>
