--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
           <center><h1 class="title">Original</h1></center>
           <div class="row">
             <div class="col s3">.</div>
-            <div class="col s2 btn btn-primary"id="one"> </div>
-            <div class="col s2 btn btn-primary"id="two"> </div>
-            <div class="col s2 btn btn-primary"id="three"> </div>
+            <div class="col s2 btn btn-primary"id="1"> </div>
+            <div class="col s2 btn btn-primary"id="2"> </div>
+            <div class="col s2 btn btn-primary"id="3"> </div>
             <div class="col s3">.</div>
           </div>
           <div class="row">
             <div class="col s3">.</div>
-            <div class="col s2 btn btn-primary"id="four"> </div>
-            <div class="col s2 btn btn-primary"id="five"> </div>
-            <div class="col s2 btn btn-primary"id="six"> </div>
+            <div class="col s2 btn btn-primary"id="4"> </div>
+            <div class="col s2 btn btn-primary"id="5"> </div>
+            <div class="col s2 btn btn-primary"id="6"> </div>
             <div class="col s3">.</div>
           </div>
           <div class="row">
             <div class="col s3">.</div>
-            <div class="col s2 btn btn-primary"id="seven"> </div>
-            <div class="col s2 btn btn-primary"id="eight"> </div>
-            <div class="col s2 btn btn-primary"id="nine"> </div>
+            <div class="col s2 btn btn-primary"id="7"> </div>
+            <div class="col s2 btn btn-primary"id="8"> </div>
+            <div class="col s2 btn btn-primary"id="9"> </div>
             <div class="col s3">.</div>
           </div>
         </div>
