reset the value of the btn to nothing to play again

--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
           </div>
           <div id="modal1" class="modal">
             <div class="modal-content">
-              <h4>Player <span class="player"></span></h4>
-              <p>WON!!!!!</p>
+              <h2 class="output"></h2>
             </div>
             <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">New Game</a>
+              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat newGame">New Game</a>
             </div>
           </div>
         <div id="8bit" class="col s12">
