--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <title>Tic-Tac-Toe</title>
   </head>
   <body class="container">
@@ -56,7 +57,7 @@
               <h2 class="output"></h2>
             </div>
             <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat newGame">New Game</a>
+              <div class="newGame btn red lighten-2">New Game</div>
             </div>
           </div>
         <div id="8bit" class="col s12">
