add img to html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </div><!--first row -->
         <div id="original" class="col s12">
-          <center><h1 class="title">Original</h1></center>
+          <center><img src="http://www.dsmsales.net/images/logos/tttmarqlrg.gif" alt="tic-tac-toe" /></center>
           <div class="ticButton">
             <div class="row">
               <div class="col s3">.</div>
