--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
               <div class="col s2 btn btn-primary"id="8"> </div>
               <div class="col s3">.</div>
             </div>
+            <div class="status">
+              <div class="col s4"></div>
+              <div class="col s4"><span id="status"></span></div>
+              <div class="col s4"></div>
+            </div>
             <div class="row results">
               <div class="col s3">.</div>
               <div class="col s2 card-panel red lighten-3">Player 1(X): <span class="xScore">0</span></div>
-              <div class="col s2">. </div>
+              <div class="col s2">.</div>
               <div class="col s2 card-panel red lighten-3">Player 2(O): <span class="oScore">0</span> </div>
               <div class="col s3">.</div>
             </div>
