remove the empty div dots as place holders

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
           </ul>
           <div class="ticButton">
             <div class="row">
-              <div class="col s3">.</div>
-              <div class="col s2 btn btn-primary"id="0"> </div>
+              <div class="col s3"></div>
+              <div class="col s2 btn btn-primary space"id="0"> </div>
               <div class="col s2 btn btn-primary"id="1"> </div>
               <div class="col s2 btn btn-primary"id="2"> </div>
-              <div class="col s3">.</div>
+              <div class="col s3"></div>
             </div>
             <div class="row">
-              <div class="col s3">.</div>
-              <div class="col s2 btn btn-primary"id="3"> </div>
+              <div class="col s3"></div>
+              <div class="col s2 btn btn-primary space"id="3"> </div>
               <div class="col s2 btn btn-primary"id="4"> </div>
               <div class="col s2 btn btn-primary"id="5"> </div>
-              <div class="col s3">.</div>
+              <div class="col s3"></div>
             </div>
             <div class="row">
-              <div class="col s3">.</div>
-              <div class="col s2 btn btn-primary"id="6"> </div>
+              <div class="col s3"></div>
+              <div class="col s2 btn btn-primary space"id="6"> </div>
               <div class="col s2 btn btn-primary"id="7"> </div>
               <div class="col s2 btn btn-primary"id="8"> </div>
-              <div class="col s3">.</div>
+              <div class="col s3"></div>
             </div>
             <div class="status">
               <div class="col s4"></div>
@@ -57,11 +57,11 @@
               <div class="col s4"></div>
             </div>
             <div class="row results">
-              <div class="col s3">.</div>
-              <div class="col s2 card-panel red lighten-3">Player 1(X): <span class="xScore">0</span></div>
-              <div class="col s2">.</div>
-              <div class="col s2 card-panel red lighten-3">Player 2(O): <span class="oScore">0</span> </div>
-              <div class="col s3">.</div>
+              <div class="col s3"></div>
+              <div class="col s2 card-panel red lighten-3 space">Player 1(X): <span class="xScore">0</span></div>
+              <div class="col s2"></div>
+              <div class="col s2 card-panel red lighten-3 left">Player 2(O): <span class="oScore">0</span> </div>
+              <div class="col s3"></div>
             </div>
           </div>
           <div id="modal1" class="modal">
