--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Tic-Tac-Toe</title>
   </head>
   <body class="container">
@@ -20,48 +21,40 @@
           </ul>
         </div>
       </div><!--first row -->
-
         <div id="original" class="col s12">
           <center><img src="http://www.dsmsales.net/images/logos/tttmarqlrg.gif" alt="tic-tac-toe" /></center>
-          <a class='dropdown-button btn teal lighten-3' id="dropdown" href='#' data-activates='dropdown1'>Difficulty</a>
+          <a class='dropdown-button btn teal lighten-3' id="dropdown" href='#' data-activates='dropdown1'><span id="diff">Easy</span></a>
           <ul id='dropdown1' class='dropdown-content'>
-            <li><a href="#!">Easy</a></li>
-            <li><a href="#!">Normal</a></li>
-            <li><a href="#!">Hard</a></li>
+            <li><a id="easy">Easy</a></li>
+            <li><a id="normal">Normal</a></li>
+            <li><a id="hard">Hard</a></li>
           </ul>
           <div class="ticButton">
             <div class="row">
-              <div class="col s3"></div>
               <div class="col s2 btn btn-primary space"id="0"> </div>
               <div class="col s2 btn btn-primary"id="1"> </div>
               <div class="col s2 btn btn-primary"id="2"> </div>
               <div class="col s3"></div>
             </div>
             <div class="row">
-              <div class="col s3"></div>
               <div class="col s2 btn btn-primary space"id="3"> </div>
               <div class="col s2 btn btn-primary"id="4"> </div>
               <div class="col s2 btn btn-primary"id="5"> </div>
               <div class="col s3"></div>
             </div>
             <div class="row">
-              <div class="col s3"></div>
               <div class="col s2 btn btn-primary space"id="6"> </div>
               <div class="col s2 btn btn-primary"id="7"> </div>
               <div class="col s2 btn btn-primary"id="8"> </div>
               <div class="col s3"></div>
             </div>
             <div class="status">
-              <div class="col s4"></div>
               <div class="col s4"><span id="status"></span></div>
               <div class="col s4"></div>
             </div>
             <div class="row results">
-              <div class="col s3"></div>
               <div class="col s2 card-panel red lighten-3 space">Player 1(X): <span class="xScore">0</span></div>
-              <div class="col s2"></div>
               <div class="col s2 card-panel red lighten-3 left">Player 2(O): <span class="oScore">0</span> </div>
-              <div class="col s3"></div>
             </div>
           </div>
           <div id="modal1" class="modal">
